src/test/ui/impl-trait/transmute/outside-of-defining-scope.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/outside-of-defining-scope.rs:11:9
   |
LL |         transmute::<_, u8>(foo());
   |         ^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `impl Sized` (this type does not have a fixed size)
   = note: target type: `u8` (8 bits)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0512`.
